--- a/index.html
+++ b/index.html
@@ -3,9 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>learning</title>
+    <link rel="stylesheet" href="index.css">
+    <style>
+        body{
+            background-image: url(images/1dARa.g);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+        }
+     sub{color: blueviolet;}
+     sup{border: 12px solid red;
+    padding: 12px;
+margin: 10px;}
+a:link{
+    color: green;
+  background-color: transparent;
+  text-decoration: none;
+  padding:10px 25px;
+  text-align: center;
+  display: inline-block;
+  background-color: red;
+}
+
+a:visited {
+  color: rgb(1, 252, 239);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+ 
+}
+table,th,td{
+    border: double;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color: rgb(247, 246, 244);
+    border-radius: 15px;
+    border-spacing: 15px;
+}   
+tr:nth-child(odd){
+    background-color: red;
+}
+
+    </style>
+    <link rel="icon" type="image/x-icon" href="images/images.jpeg">
+    
+
+   
 </head>
 <body>
     
+    <h1 style="color: red;">heading</h1>
+    <p title="this is p tag">paragraph</p>
+    <b>hello</b>
+    <SUB>HELLO</SUB>
+    <sup>hi</sup>
+    <abbr title="abbrevation">abbr</abbr>
+    <bdo dir="rtl">welcome</bdo>
+    <blockquote>wow</blockquote>
+    <cite>jscode</cite>
+    <q>quotation</q>
+    <!-- enter c and enter to comment -->
+    <a href="blank" target="_top">blank</a>
+    <a href="hai">gud</a>
+    <img src="images/1dARa.gif" alt="me"  style="width:500;height:333">
+    <a href="images/1dARa.gif" target="_self">
+        <img src="images/images.jpeg" alt="bird" style="width:23px;height: 23px;">
+    </a>
+    <p style="background-image: url(images/images.jpeg);background-attachment: fixed;"><img src="images/images.jpeg" alt="float" style="float:left;width:300px;height: 300px;" >florating
+    to vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv</p>
+   <table style="width: 100%;">
+    <colgroup>
+        <col span="2" style="background-color: rgb(8, 117, 212);">
+    </colgroup>
+    <caption style="color: burlywood;">coding</caption>
+    <tr >
+        <th>a</th>
+        <th>b</th>
+        <th>c</th>
+    </tr>
+    <tr>
+        <td>a</td>
+        <td>b</td>
+        <td>c</td>
+    </tr>
+    <tr>
+        <td>a</td>
+        <td>b</td>
+        <td>c</td>
+    </tr>
+   </table>
+
+<ul style="list-style-type:disc">
+    <li>s</li>
+    <li>a</li>
+    <li>b</li>
+</ul>
+<ol type="I">
+    <li>s</li>
+    <li>a</li>
+    <li>b</li>
+</ol>
+
+<dl>
+<dt>a</dt>
+<dd>-1</dd>
+<dt>b</dt>
+<dd>-2</dd>
+</dl>
+ 
+<iframe src="images/1dARa.gif" name="iframe" style="height: 200px;width: 200px;border: dashed;" title="iframe ex"></iframe>
+<p><a href="images/images.jpeg" target="iframe">iframe</a></p>
+
+<p id="demo"></p>
+
+   <button type="button" onclick="document.getElementById('demo').innerHTML=Date()">click</button>
+<p id="d"></p>
+
+   <script>
+    document.getElementById('d').innerHTML="hi";
+    document.getElementById("d").style.color="red";
+    document.getElementById("d").style.backgroundColor="yellow";
+
+   </script>
+
+<h2>css</h2>
+<div>
+    hello
+</div>
 </body>
 </html>
