--- a/03/07/login.html
+++ b/03/07/login.html
@@ -5,25 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+
 </head>
 <body>
     <div class="content">
         <h1>Login</h1>
-<form action="#">
+<form action="form" id="form">
     <div class="context">   
 <input type="text" required class="name" id="name" placeholder="Name">
-<label for="name"></label> 
+<label for="name">input</label> 
+
+
     </div>
      <div class="context">
+        <label for="password"></label>
 <input type="password" required name="password" id="password" placeholder="Password">
-<label for="password"></label>
+
     </div>
     <div class="pass">Forget Password?</div> 
     <div class="btn">
-<button type="submit">SIGN IN</button>
+<button type="submit" value="login">SIGN IN</button>
 <button type="reset">RESET</button>
     </div>
-<div class="link">
+    <div class="link">
 not a member?<a href="register.html">signup</a>
 </div>
 </form>
